--- a/package.json
+++ b/package.json
@@ -7,26 +7,33 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "test": "node ./node_modules/jest/bin/jest.js --watch --coverage",
-    "test:update": "node ./node_modules/jest/bin/jest.js -u"
+    "test:update": "node ./node_modules/jest/bin/jest.js -u",
+    "devtools": "react-devtools"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/samples": "^2.0.2",
-    "apollo-client": "^1.9.0",
-    "expo": "^19.0.0",
+    "apollo-client": "^1.9.1",
+    "expo": "^20.0.0",
+    "faker": "^4.1.0",
     "graphql-tag": "^2.4.2",
     "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
-    "react-apollo": "^1.4.10",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-19.0.0.tar.gz",
+    "react-apollo": "^1.4.14",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-native-image-picker": "^0.26.3",
-    "react-navigation": "^1.0.0-beta.12"
+    "react-navigation": "^1.0.0-beta.12",
+    "subscriptions-transport-ws": "^0.8.2"
   },
   "devDependencies": {
     "babel-preset-react-native": "1.9.2",
-    "jest-expo": "^19.0.5",
+    "eslint": "^4.5.0",
+    "jest-expo": "^20.0.0",
+    "prettier": "^1.5.3",
+    "react-devtools": "^2.5.0",
+    "react-devtools-core": "^2.5.0",
     "react-native-dotenv": "^0.1.0"
   }
 }
