--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "node ./node_modules/jest/bin/jest.js --watch --coverage",
     "test:update": "node ./node_modules/jest/bin/jest.js -u",
-    "lint":"",
+    "lint": "",
     "devtools": "react-devtools"
   },
   "jest": {
@@ -19,14 +19,17 @@
   },
   "dependencies": {
     "@expo/samples": "^2.0.2",
+    "@expo/vector-icons": "^5.1.0",
     "apollo-client": "^1.9.1",
     "expo": "^20.0.0",
     "faker": "^4.1.0",
     "graphql-tag": "^2.4.2",
     "lodash": "^4.17.4",
+    "native-base": "^2.3.1",
     "react": "16.0.0-alpha.12",
     "react-apollo": "^1.4.14",
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
+    "react-native-easy-grid": "^0.1.15",
     "react-native-image-picker": "^0.26.3",
     "react-navigation": "^1.0.0-beta.12",
     "subscriptions-transport-ws": "^0.8.2"
