--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,22 @@
 {
-  "presets": ["babel-preset-expo","react-native", "react-native-dotenv"],
+  "presets": [
+    "babel-preset-expo",
+    "react-native",
+    "react-native-dotenv"
+  ],
   "env": {
     "development": {
-      "plugins": ["transform-react-jsx-source"]
+      "plugins": [
+        "transform-react-jsx-source",
+        [
+          "module-resolver",
+          {
+            "alias": {
+              "react-apollo": "./node_modules/react-apollo/react-apollo.browser.umd.js"
+            }
+          }
+        ]
+      ]
     }
   }
 }
