--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
     "devtools": "react-devtools"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "moduleFileExtensions": ["js", "jsx"],
+    "moduleDirectories": ["node_modules"],
+    "moduleNameMapper": {
+      "^js(.*)$": "<rootDir>/graphql/$1",
+      "^constants(.*)$": "<rootDir>/constants/$1",
+      ".*\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/assets/images/$1"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|expo|react-navigation|native-base-shoutem-theme|@shoutem/theme|@shoutem/animation|@shoutem/ui|tcomb-form-native)"
+
+    ]
   },
   "eslintConfig": {
     "extends": "expo"
   },
   "dependencies": {
-    "@expo/samples": "^2.0.2",
     "@expo/vector-icons": "^5.1.0",
     "apollo-client": "^1.9.1",
     "expo": "^20.0.0",
@@ -42,6 +52,8 @@
     "prettier": "^1.5.3",
     "react-devtools": "^2.5.0",
     "react-devtools-core": "^2.5.0",
-    "react-native-dotenv": "^0.1.0"
+    "react-dom": "^16.0.0-beta.5",
+    "react-native-dotenv": "^0.1.0",
+    "react-test-renderer": "16.0.0-alpha.12"
   }
 }
