--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest.js --watch --coverage",
+    "test": "node ./node_modules/jest/bin/jest.js --watch",
     "test:update": "node ./node_modules/jest/bin/jest.js -u",
     "devtools": "react-devtools"
   },
