--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     "babel-preset-expo",
     "react-native",
-    "react-native-dotenv"
+    "react-native-dotenv",
+    "flow"
   ],
   "env": {
     "development": {
