Add form package

--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "graphql-tag": "^2.4.2",
     "lodash": "^4.17.4",
     "native-base": "^2.3.1",
+    "prop-types": "^15.5.10",
     "react": "16.0.0-alpha.12",
     "react-apollo": "^1.4.14",
     "react-native": "https://github.com/expo/react-native/archive/sdk-20.0.0.tar.gz",
     "react-native-easy-grid": "^0.1.15",
+    "react-native-form-generator": "^0.9.9",
     "react-native-image-picker": "^0.26.3",
+    "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-navigation": "^1.0.0-beta.12",
     "subscriptions-transport-ws": "^0.8.2"
   },
