--- a/package.json
+++ b/package.json
@@ -6,11 +6,8 @@
   "license": "MIT",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "test": "node ./node_modules/jest/bin/jest.js --watch",
+    "test": "node ./node_modules/jest/bin/jest.js --watch --silent",
     "test:update": "node ./node_modules/jest/bin/jest.js -u",
-    "flow": "node_modules/.bin/flow --quiet",
-    "flow:stop": "node_modules/.bin/flow stop",
-    "flow:watch": "node_modules/.bin/flow-watch",
     "devtools": "react-devtools"
   },
   "jest": {
@@ -37,6 +34,7 @@
   "dependencies": {
     "@expo/vector-icons": "^5.1.0",
     "apollo-client": "^1.9.1",
+    "apollo-test-utils": "^0.3.2",
     "expo": "^20.0.0",
     "graphql-tag": "^2.4.2",
     "lodash": "^4.17.4",
@@ -48,18 +46,14 @@
     "react-native-easy-grid": "^0.1.15",
     "react-native-form-generator": "^0.9.9",
     "react-native-image-picker": "^0.26.3",
-    "react-native-keyboard-aware-scroll-view": "^0.3.0",
     "react-navigation": "^1.0.0-beta.12",
     "subscriptions-transport-ws": "^0.8.2"
   },
   "devDependencies": {
-    "babel-preset-flow": "^6.23.0",
     "babel-preset-react-native": "1.9.2",
     "eslint": "^4.5.0",
     "eslint-config-expo": "^6.0.0",
     "faker": "^4.1.0",
-    "flow-bin": "^0.53.1",
-    "flow-watch": "^1.1.1",
     "jest-expo": "^20.0.0",
     "prettier": "^1.5.3",
     "react-devtools": "^2.5.0",
