--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "jest": {
     "preset": "jest-expo",
     "moduleFileExtensions": [
-      "js",
+      "spec.js",
       "jsx"
     ],
     "moduleDirectories": [
